fix display flex on smallerpichis to block to stay left in p

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,7 +77,7 @@ p {
 .smallerpichis {
   font-size: 75%;
   max-width: 700px;
-  display: flex;
+  display: block;
   margin-top: 4px;
   text-align: left;
   margin-bottom: 0;
